src/components/sidebar/sidebar.css
@layer base {
  :root {
    --bl-topbar-bg: var(--bl-clr-surface);
    --bl-topbar-height: 3.5rem;

    --bl-sidebar-width: 16rem;
    --bl-sidebar-border-color: var(--bl-border-color);
    --bl-sidebar-color: var(--bl-clr-text);
    --bl-sidebar-color-hover: var(--bl-clr-text);
    --bl-sidebar-bg: var(--bl-clr-surface);
    --bl-sidebar-item-bg-hover: var(--bl-clr-hover-bg);
    --bl-sidebar-title-color: var(--bl-clr-text-light);
    --bl-sidebar-backdrop-bg: var(--bl-clr-overlay);
  }
}

@layer components {
  .topbar {
    position: sticky;
    z-index: var(--bl-z-topbar);
    top: 0;
    height: var(--bl-topbar-height);
    display: flex;
    gap: 1rem;
    align-items: center;
    padding-inline: 1rem;
    border-bottom: 1px solid var(--bl-border-color);
    background-color: var(--bl-topbar-bg);
    justify-self: stretch;
    overflow: hidden;

    .topbar-brand {
      font-weight: var(--bl-fw-bold);
      font-size: var(--bl-fs-2xl);
    }

    .topbar-brand:has(img) {
      height: 100%;
    }

    .topbar-brand img {
      height: 100%;
      width: auto;
      object-fit: contain;
      object-position: center;
    }
  }

  .topbar-center {
    display: flex;
    align-items: center;
    justify-content: center;
    flex: 1;
  }

  .btn-sidebar-toggle {
    position: absolute;
    z-index: var(--bl-z-topbar);
  }

  html:has(.sidebar.show) {
    overflow: hidden;
  }

  .sidebar {
    display: none;
    position: fixed;
    inset: 0;
    width: 100%;
    z-index: var(--bl-z-sidebar);
    background-color: var(--bl-sidebar-backdrop-bg);
    backdrop-filter: blur(4px);
  }

  .sidebar.show {
    display: block;
    animation: sidebarFadeIn var(--bl-transition-md) both;
  }

  .sidebar.hide {
    animation: sidebarFadeOut var(--bl-transition-md) both;
  }

  .sidebar-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    border-right: 1px solid var(--bl-sidebar-border-color);
    overflow-y: auto;
    background-color: var(--bl-sidebar-bg);
    width: min(var(--bl-sidebar-width), 100%);
    height: 100dvh;
  }

  .sidebar.show .sidebar-content {
    animation: sidebarSlideIn var(--bl-transition-md) both;
  }

  .sidebar.hide .sidebar-content {
    animation: sidebarSlideOut var(--bl-transition-md) both;
  }

  @keyframes sidebarSlideIn {
    from {
      transform: translateX(-100%);
    }
    to {
      transform: translateX(0);
    }
  }

  @keyframes sidebarSlideOut {
    from {
      transform: translateX(0);
    }
    to {
      transform: translateX(-100%);
    }
  }

  @keyframes sidebarFadeIn {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }

  @keyframes sidebarFadeOut {
    from {
      opacity: 1;
    }
    to {
      opacity: 0;
    }
  }

  .sidebar-brand {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 1rem;
    font-size: var(--bl-fs-2xl);
    font-weight: var(--bl-fw-bold);
  }

  .sidebar-group-title {
    font-size: 0.75rem;
    font-weight: var(--bl-fw-bold);
    text-transform: uppercase;
    letter-spacing: 0.05em;
    padding-inline: 1.5rem;
    color: var(--bl-sidebar-title-color);
    padding-top: 0.5rem;
  }

  .sidebar-nav {
    padding: 0.5rem;
    display: flex;
    flex-direction: column;
    gap: 0.125rem;
  }

  .sidebar-link {
    position: relative;
    color: var(--bl-sidebar-color);
    padding: 0.5rem 1.5rem;
    text-decoration: none;
    font-size: var(--bl-fs-base);
    font-weight: var(--bl-fw-medium);
    display: flex;
    align-items: center;
    gap: 1rem;
    border-radius: var(--bl-border-radius);
    transition-duration: var(--bl-transition-md);
    transition-property: background-color, color;
    text-wrap: nowrap;
    width: 100%;
  }

  .sidebar-link:hover {
    background-color: var(--bl-sidebar-item-bg-hover);
    color: var(--bl-sidebar-color-hover);
  }

  .sidebar-item.active .sidebar-link {
    color: var(--bl-sidebar-color-hover);
    background-color: var(--bl-sidebar-item-bg-hover);
  }

  .sidebar-bottom > * {
    border-top: 1px solid var(--bl-sidebar-border-color);
  }

  .sidebar-collapsible-trigger::after {
    position: absolute;
    content: "";
    right: 1.5rem;
    width: 1rem;
    height: 1rem;
    background-image: url("../../icons/chevron.svg");
    background-size: contain;
    background-repeat: no-repeat;
    transition: transform var(--bl-transition-md);
    transform: rotate(-90deg);
  }

  .sidebar-collapsible-trigger[aria-expanded="true"]::after {
    transform: rotate(0deg);
  }

  .sidebar-collapsible-content {
    padding-left: 1rem;
  }

  @media screen and (min-width: 768px) {
    .app {
      display: grid;
      grid-template-columns: minmax(var(--bl-sidebar-width), max-content) 1fr;
      align-items: start;
    }

    .topbar {
      display: none;
    }

    .sidebar {
      display: block;
      position: sticky;
      top: 0;

      .sidebar-content {
        width: 100%;
      }
    }
  }
}

